0.9.3 Minecraft 1.20.6 update, HandOfGod all entities
- Added an option to **HandOfGod** that can run a fill command around every non-player entity on the server which functions just like the "Troll Other Players" options.
- Added a mode to **NbtEditor** called "Copy" It takes the Nbt data of the thing in your main hand, and copies it to a thing in your offhand.
- Temporarily removed the Item mode from **NbtEditor** in the 1.20.6 Minecraft version (the trouser 1.20.4 and 1.20.2 release still have it). The new Nbt components system introduced in Minecraft 1.20.5 might break making illegal enchantments on items with just Creative mode.